syntax = "proto3";
package payments;


service Bank {
    rpc SendPayment (BankPaymentRequest) returns (BankPaymentResponse);
}

message BankPaymentRequest{
    string from_addr=1;
    string to_addr=2;
    uint32 amount=3;
}

message BankPaymentResponse{
    bool successful=1;
    string message=2;
}